data/derived/sp14/progs/unify/prog4450.ml.out
Characters 156-176:
  | y :: t -> if x = y then palindromeHelper s t
                            ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         unit
